--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aquinoefomm.github.io/react-guess-game",
+  "homepage": "https://aquinoefomm.github.io/react-guess-game-v2",
   "name": "character-guess-game",
   "version": "0.1.0",
   "private": true,
